--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -40,8 +40,13 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")">Add New</a></li>
+            <li><a href="/download.json">Download</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+          
+        </div>
+       
+        
+        <!--/.nav-collapse -->
  
       </div>
     </nav>
