--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,13 +7,14 @@
 @main("Application Profile") {
 <div class="container">
 <table id="example" class="display" cellspacing="0" width="100%">
-<thead><tr><th>Icon</th><th>Label</th><th>Name</th><th>Uri</th></tr></thead>
+<thead><tr><th>Icon</th><th>Label</th><th>Name</th><th>Uri</th><th>RefType</th></tr></thead>
 @for(entry <- theApplicationProfile){
 <tr>
 <td><span class="@entry.icon"></span><br/><a href="/etikett?url=@Application.EncodeURL(entry.uri)&colum=Icon">@entry.icon</a></td>
 <td><a href="/etikett?url=@Application.EncodeURL(entry.uri)&colum=Label">@entry.label</a></td>
 <td><a href="/etikett?url=@Application.EncodeURL(entry.uri)&colum=Name">@entry.name</a></td>
 <td><a href="/etikett?url=@Application.EncodeURL(entry.uri)">@entry.uri</a></td>
+<td><a href="/etikett?url=@Application.EncodeURL(entry.uri)&colum=RefType"">@entry.referenceType</a></td>
 </tr>
 }
 </table>
