--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -43,7 +43,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/etikett/upload">Add New</a></li>
-            <li><a href="/etikett/download.json">Download</a></li>
+            <li><a href="/etikett/download.json">Json</a></li>
+            <li><a href="/etikett/context.json">Json-Ld Context</a></li>
           </ul>
           
         </div>
