Persist data in a mysql table instead of using an in-memory hash

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,8 @@
 @* Copyright 2015 Jan Schnasse, hbz. Licensed under the GNU Affero General Public License *@
- @(theApplicationProfile: List[MapEntry])
+ @(theApplicationProfile: List[Etikett])
 
 @import play.api.Play.current
-@import models.MapEntry
+@import models.Etikett
 
 @main("Application Profile") {
 <div class="container">
