--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -43,7 +43,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/upload">Add New</a></li>
-            <li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/download.json">Json</a></li>
+            <li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/labels.json">Json</a></li>
             <li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/context.json">Json-Ld Context</a></li>
           </ul>
           
