--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -13,6 +13,7 @@
     @helper.inputText(myForm("Name"))
     @helper.inputText(myForm("Uri"))
     @helper.inputText(myForm("ReferenceType"))
+    @helper.inputText(myForm("Container"))
     <input type="submit" value="Add" />
 }
 
