--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
 
 <div class="col-xs-11">
 <table id="example" class="display" cellspacing="0" width="100%">
-<thead><tr><th>Icon</th><th>Label</th><th>Name</th><th>Uri</th><th>RefType</th><th>Action</th></tr></thead>
+<thead><tr><th>Icon</th><th>Label</th><th>Name</th><th>Uri</th><th>Type</th><th>Container</th><th>Action</th></tr></thead>
 @for(entry <- theApplicationProfile){
 <tr>
 <td><span class="@entry.icon"></span><br/><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")?url=@Application.EncodeURL(entry.uri)&column=Icon">@entry.icon</a></td>
@@ -17,6 +17,7 @@
 <td><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")?url=@Application.EncodeURL(entry.uri)&column=Name">@entry.name</a></td>
 <td><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")?url=@Application.EncodeURL(entry.uri)">@entry.uri</a></td>
 <td><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")?url=@Application.EncodeURL(entry.uri)&column=RefType"">@entry.referenceType</a></td>
+<td><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")?url=@Application.EncodeURL(entry.uri)&column=Container"">@entry.container</a></td>
 <td>
     <a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/edit?url=@Application.EncodeURL(entry.uri)" class="btn btn-default">
 		<span class="fa fa-pencil"/>
