turn on integration test
- load jquery.dataTables before dataTables.bootstrap
- catch some eclipse warnings

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,12 +20,12 @@ General Public License *@
 <script src="@controllers.routes.Assets.at("javascripts/jquery-1.10.2.min.js")"></script>
 <script src="@controllers.routes.Assets.at("javascripts/jquery-ui.min.js")"></script>
 <script src="@controllers.routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+<script src="@controllers.routes.Assets.at("javascripts/jquery.dataTables.min.js")">
 <script src="@controllers.routes.Assets.at("javascripts/dataTables.bootstrap.js")"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
 
-
-<script src="@controllers.routes.Assets.at("javascripts/jquery.dataTables.min.js")"></script>
+</script>
 <script type="text/javascript" charset="utf-8">
 	$(document).ready(function() {
 		$('#example').dataTable({
