allow to add json context to database

--- a/app/views/upload.scala.html
+++ b/app/views/upload.scala.html
@@ -11,6 +11,8 @@ Upload a Turtle Rdf Skos File
        <label for="rdf-format">Rdf-Turtle</label>
        <input type="radio" id="json-format" name="format-cb" value="Json">
        <label for="json-format">Json</label>
+       <input type="radio" id="json-context-format" name="format-cb" value="Json-Context">
+       <label for="json-format">Json-Context</label>
     </fieldset>
     </span>
     <p>
