Split context, etiketts and context annotations
- add views for
'All Entries','Concept Entries' and 'Context Entries'
- add download options fo
'@context + annotations', 'Only context' and 'Only annotations'

--- a/app/views/delete.scala.html
+++ b/app/views/delete.scala.html
@@ -5,7 +5,7 @@
 @import play.api.Play.current
 @import models.Etikett
 
-@main("Application Profile") {
+@main("Etikett") {
 
 <form action="delete?url=@url" method="POST">
   @helper.inputText(myForm("Icon"))
