--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -5,7 +5,7 @@
 @import play.api.Play.current
 @import models.Etikett
 
-@main("Application Profile") {
+@main("Etikett") {
 
 @helper.form(action = routes.Application.update()) {
     @helper.inputText(myForm("Icon"))
