--- a/app/views/message.scala.html
+++ b/app/views/message.scala.html
@@ -1,7 +1,7 @@
 @* Copyright 2015 Jan Schnasse, hbz. Licensed under the GNU Affero General Public License *@
 @(text:String)
 
-@main("Application Profile") {
+@main("Etikett") {
 	
 	<div class="message">
 	<pre>@text</pre>
