--- a/app/views/upload.scala.html
+++ b/app/views/upload.scala.html
@@ -1,6 +1,6 @@
 @* Copyright 2015 Jan Schnasse, hbz. Licensed under the GNU Affero General Public License *@
 
-@main("Application Profile") {
+@main("Etikett") {
 
 Upload a Turtle Rdf Skos File
 @helper.form(action = routes.Application.addData, 'enctype -> "multipart/form-data") {
