--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,6 +1,5 @@
 @* Copyright 2015 Jan Schnasse, hbz. Licensed under the GNU Affero
-General Public License *@ 
-@(title: String)(content: Html) 
+General Public License *@ @(title: String)(content: Html) 
 @import play.api.Play.current
 <!DOCTYPE html>
 <html>
@@ -50,18 +49,29 @@ General Public License *@
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
+					<li class="dropdown"><a class="dropdown-toggle"
+						aria-expanded="false" arai-haspopup="true" role="button"
+						data-toggle="dropdown" href="#"> Show <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/context">Context entries</a></li>
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/concepts">Concept entries</a></li>
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")">All etiketts</a></li>
+						</ul></li>
+					<li class="dropdown"><a class="dropdown-toggle"
+						aria-expanded="false" arai-haspopup="true" role="button"
+						data-toggle="dropdown" href="#"> Download <span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/context.json">@@context + annotations</a></li>
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/raw-context.json">Only @@context</a></li>
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/context-annotations.json">Only annotations</a></li>
+							<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/labels.json">All etiketts</a></li>
+
+						</ul></li>
 					<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/upload">Add
 							New</a></li>
-					<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/labels.json">Json</a></li>
-					<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/context.json">Json-Ld
-							Context</a></li>
 				</ul>
-
 			</div>
-
-
 			<!--/.nav-collapse -->
-
 		</div>
 	</nav>
 	<div class="jumbotron"></div>
