--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,15 +16,15 @@ General Public License *@ @(title: String)(content: Html)
 	href="@controllers.routes.Assets.at("images/favicon.png")">
 <link rel="stylesheet" href="@controllers.routes.Assets.at("stylesheets/font-awesome.min.css")">
 <link rel="stylesheet" href="@controllers.routes.Assets.at("stylesheets/dataTables.bootstrap.css")">
+<link rel="stylesheet" href="@controllers.routes.Assets.at("stylesheets/jquery-ui.css")">
 <script src="@controllers.routes.Assets.at("javascripts/jquery-1.10.2.min.js")"></script>
 <script src="@controllers.routes.Assets.at("javascripts/jquery-ui.min.js")"></script>
 <script src="@controllers.routes.Assets.at("javascripts/bootstrap.min.js")"></script>
-<script src="@controllers.routes.Assets.at("javascripts/jquery.dataTables.min.js")">
-<script src="@controllers.routes.Assets.at("javascripts/dataTables.bootstrap.js")"></script>
+<script src="@controllers.routes.Assets.at("javascripts/jquery.dataTables.min.js")"></script>
+<script src="@controllers.routes.Assets.at("javascripts/markdown/markdown.js")"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
 
-</script>
 <script type="text/javascript" charset="utf-8">
 	$(document).ready(function() {
 		$('#example').dataTable({
