add a weight to each entry

--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -16,6 +16,7 @@
 		@helper.inputText(myForm("Uri"), 'id -> "uriIn", 'size -> 30) 
 		@helper.inputText(myForm("ReferenceType"),'referenceTypeIn -> "icon", 'size -> 30)
 		@helper.inputText(myForm("Container"), 'id -> "containerIn", 'size -> 30)
+		@helper.inputText(myForm("Weight"), 'id -> "weightIn", 'size -> 30)
 	</div>
 	<div class="col-md-7">
 	 <dt><label for="commentTabs">Comment</label></dt>
