--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,7 +28,7 @@ General Public License *@ @(title: String)(content: Html)
 <script type="text/javascript" charset="utf-8">
 	$(document).ready(function() {
 		$('#example').dataTable({
-			"order" : [ 0, 'desc' ]
+			"order" : [ 0, 'asc' ]
 		});
 	});
 </script>
