Add new /convert endpoint and basic multilingual support - Under /tools/etikett/convert an on-the-fly conversion of turtle to labels.json is provided. The form sends a form encoded POST to /convert. The form encoded data must contain the following parameters: file, format, language. - The etikett model has been updated and added with two fields: 'multilangLabel' is only visible for json generators but is not stored in the database. 'multiLangSerialized' is a String representation of the multilangLabel map. It is stored in the database and is not visible for json generators. - a new optional parameter 'lang' has been added to the '/' endpoint. It takes effect, if the parameter 'column=label' is present. The service accepts language codes and tries to return the proper label from the languageMap

--- a/app/views/convert.scala.html
+++ b/app/views/convert.scala.html
@@ -1,9 +1,8 @@
 @* Copyright 2015 Jan Schnasse, hbz. Licensed under the GNU Affero General Public License *@
 
 @main("Etikett") {
-
-Upload a Turtle Rdf Skos File
-@helper.form(action = routes.Application.addData, 'enctype -> "multipart/form-data") {
+@helper.form(action = routes.UnauthorizedCalls.postConvert, 'enctype -> "multipart/form-data") {
+   
     <label class="form-control-label" for="file">File</label>
     <input id="file" type="file" name="data">
     
@@ -21,15 +20,15 @@ Upload a Turtle Rdf Skos File
     <fieldset> 
 		<select name="lang" id="select-input" class="input-widget">
 		<option value="" selected>Default (no language)</option>
-		<option value="de" selected>German</option>
-		<option value="en" selected>English</option>
-		<option value="ru" selected>Russian</option>
+		<option value="de" >German</option>
+		<option value="en" >English</option>
+		<option value="ru" >Russian</option>
 		</select>
     </fieldset>
+ 
     <p>
-        <input type="submit" name="Upload" value="Upload">
+        <input type="submit" name="Convert" value="Convert">
     </p>
     
 }
-
 }
