add on-the-fly convert to main menue

--- a/app/views/convert.scala.html
+++ b/app/views/convert.scala.html
@@ -19,7 +19,7 @@
     <label class="form-control-label" for="select-input">Language</label>
     <fieldset> 
 		<select name="lang" id="select-input" class="input-widget">
-		<option value="" selected>Default (no language)</option>
+		<option value="" selected>Take plain "prefLabel" only</option>
 		<option value="de" >German</option>
 		<option value="en" >English</option>
 		<option value="ru" >Russian</option>
