--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -70,6 +70,7 @@ General Public License *@ @(title: String)(content: Html)
 						</ul></li>
 					<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/upload">Add
 							New</a></li>
+					<li><a href="@play.api.Play.configuration.getString("application.context").getOrElse("")/convert">On-the-fly convert</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
