modifications for Ubuntu18.04 with more recent play framework

--- a/install/etikett.tmpl
+++ b/install/etikett.tmpl
@@ -30,8 +30,8 @@ set -e
 PATH=/bin:/usr/bin:/sbin:/usr/sbin
 NAME=etikett
 DESC="etikett thumbnail generator"
-JAVA_HOME=/opt/java
-HOME="/opt/etikett"
+JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+HOME="/opt/toscience"
 USER="cpt"
 GROUP="cpt"
 SECRET=`uuidgen`
