deploy.sh und install.sh und Start-Stop-Skript : Pfade geändert und in ein bin/-Verzeichnis geschoben

--- a/install/toscience-labels.tmpl
+++ b/install/toscience-labels.tmpl
@@ -34,7 +34,7 @@ NAME=etikett
 DESC="Labels thumbnail generator"
 JAVA_HOME=/opt/jdk
 JAVA_OPTS="-XX:+HeapDumpOnOutOfMemoryError"
-HOME="/opt/toscience/apps/to.science.labels"
+HOME="/opt/toscience/toscience-labels"
 USER="toscience"
 GROUP="users"
 SECRET=`uuidgen`
